More problems solver

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -28,3 +28,229 @@
 /src/
 /src/
 /src/
+/.git/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
