--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -259,3 +259,170 @@
 /src/
 /src/
 /src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
+/src/
