more leetcode sols

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,428 +1,2 @@
 /src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/.git/
-/FrequentQuestions/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/.git/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
-/src/
+/.settings/
